--- a/app/src/main/res/layout/activity_end_screen.xml
+++ b/app/src/main/res/layout/activity_end_screen.xml
@@ -5,7 +5,7 @@
     android:id="@+id/endContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroudBrown"
+    android:background="@color/stealBlue"
     android:orientation="vertical"
     tools:context=".EndScreen">
 
@@ -13,18 +13,23 @@
         android:id="@+id/marvinFly"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:paddingTop="20dp"
+
+        android:layout_marginEnd="10dp"
         android:layout_weight=".33"
+        android:background="@color/backgroudBrown"
         app:srcCompat="@drawable/marvin_fly_small" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_weight=".5"
-        android:background="@color/stealBlue">
+        android:background="@color/backgroudBrown"
+        android:paddingTop="20dp">
 
         <TextView
             android:id="@+id/messageTextView"
@@ -34,7 +39,7 @@
             android:text="Despues de una dura prueba has podido demostrar tus conocimientos informaticos, humano.\n¿Por que no compartir tu puntuación con otros terricolas?"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="23dp" />
+            android:textSize="23sp" />
 
         <TextView
             android:id="@+id/scoreTextView"
@@ -44,7 +49,7 @@
             android:text="Cargando datos..."
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="30dp" />
+            android:textSize="30sp" />
 
     </RelativeLayout>
 
@@ -54,7 +59,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_weight=".17"
-        android:background="@color/stealBlue">
+        android:background="@color/backgroudBrown">
 
         <Button
             android:id="@+id/button"
@@ -65,7 +70,7 @@
             android:layout_marginRight="10dp"
             android:backgroundTint="@color/black"
             android:text="Compartir Puntación!"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
     </RelativeLayout>
 
 </LinearLayout>
