--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/introContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroudBrown"
-    android:id="@+id/introContainer"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -23,8 +23,7 @@
             android:text="¡Hola humano! Soy Marvin, el androide paranoide."
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="25sp"
-            />
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/mainIntro"
@@ -63,6 +62,6 @@
         android:layout_margin="10dp"
         android:layout_weight=".1"
         android:backgroundTint="@color/black"
-        android:text="Comenzar!!"
-        android:onClick="starQuiz"/>
+        android:onClick="starQuiz"
+        android:text="Comenzar!!" />
 </LinearLayout>
