--- a/app/src/main/res/layout/activity_end_screen.xml
+++ b/app/src/main/res/layout/activity_end_screen.xml
@@ -71,6 +71,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:backgroundTint="@color/black"
+            android:onClick="sendTweet"
             android:text="Compartir Puntación!"
             android:textSize="20sp" />
     </RelativeLayout>
