--- a/app/src/main/res/layout/activity_checkbox.xml
+++ b/app/src/main/res/layout/activity_checkbox.xml
@@ -421,7 +421,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/buttonStart"
+            android:id="@+id/buttonSubmit"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="10dp"
